# OOPlab2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example/: example1.py  example2.py
src/: make1.py  make2.py
src/task_package/: __init__.py  zad1.py  zad2.py
tests/: test_make1.py  test_make2.py
